openshift/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-manager
  namespace: file-manager
  labels:
    app: file-manager
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: file-manager
